{
    "name": "TestIput",
    "maps": [
        {
            "name": "Touch",
            "id": "ad52239c-c99f-4f9d-8e49-a66c6aaf9413",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "1d34a4d8-5c71-4a8c-be43-3b6908d18539",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "474a4b3e-ee5b-4aac-be7d-5e6c3169df51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b80c02cf-4041-40fd-a83f-4f752f1591ac",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "097869cb-b04c-4392-8290-6f83e3ba1129",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Rotate",
            "id": "ee0d6dbd-9e1f-4705-af33-64c6a998927b",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "b877f611-989f-4523-b1eb-60f278f9cb1c",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ddb0f93-cb9d-4c12-be01-44b284203efb",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}